fix: remove ong address
